<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2025 ANALOGUE IT SOLUTIONS. All rights reserved.
  ~ Use of this source code is governed by a MIT-style license that can be
  ~ found in the LICENSE file.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <item
        android:id="@+id/bottom_visits"
        android:icon="@drawable/ic_calendar"
        android:title="@string/visits"
        tools:ignore="HardcodedText" />
    <item
        android:id="@+id/bottom_clients"
        android:icon="@drawable/ic_client"
        android:title="@string/clients"
        tools:ignore="HardcodedText" />
    <item
        android:id="@+id/bottom_alerts"
        android:icon="@drawable/ic_alert"
        android:title="@string/alerts"
        tools:ignore="HardcodedText" />

</menu>