<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2025 ANALOGUE IT SOLUTIONS. All rights reserved.
  ~ Use of this source code is governed by a MIT-style license that can be
  ~ found in the LICENSE file.
  -->

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.visits.view.ToDoFragment">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:textFontWeight="400"
                        android:fontFamily="@font/arvo_regular"
                        android:textSize="@dimen/_12ssp"
                        android:text="@string/list_of_todo_s"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:targetApi="p" />
                    <androidx.appcompat.widget.AppCompatTextView
                        android:textFontWeight="400"
                        android:fontFamily="@font/arvo_regular"
                        android:textSize="@dimen/_12ssp"
                        android:text="@string/submitted"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:targetApi="p" />
                    <androidx.appcompat.widget.AppCompatTextView
                        android:textFontWeight="400"
                        android:fontFamily="@font/arvo_regular"
                        android:textSize="@dimen/_12ssp"
                        android:text="@string/app_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:targetApi="p" />

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.core.widget.NestedScrollView>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</FrameLayout>