<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2025 ANALOGUE IT SOLUTIONS. All rights reserved.
  ~ Use of this source code is governed by a MIT-style license that can be
  ~ found in the LICENSE file.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screenBackground"
    tools:context=".view.auth.view.EnterPasscodeFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_bg"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgTopLogo"
            android:layout_width="@dimen/_66sdp"
            android:layout_height="@dimen/_66sdp"
            android:layout_gravity="center"
            android:layout_marginTop="?attr/actionBarSize"
            android:src="@drawable/app_logo" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/_20sdp">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/robotoslab_regular"
                android:letterSpacing="0"
                android:text="@string/enter_passcode"
                android:textSize="@dimen/_20ssp"
                android:textStyle="normal" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/robotoslab_regular"
                android:letterSpacing="0"
                android:text="@string/enter_your_6_digit_passcode_to_log_in"
                android:textSize="@dimen/_10ssp"
                android:textStyle="normal" />

            <com.aits.careesteem.utils.PinView
                android:id="@+id/pinView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:dotProgressColor="@color/colorPrimary"
                app:fingerVisible="false"
                app:showForgotPasscode="false" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:gravity="center"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvForgotPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:drawableStart="@drawable/ic_forgot_password"
                    android:gravity="center_vertical"
                    android:text="@string/forgot_password"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_14ssp"
                    app:fontFamily="@font/robotoslab_regular" />
            </LinearLayout>


        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>