<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2025 ANALOGUE IT SOLUTIONS. All rights reserved.
  ~ Use of this source code is governed by a MIT-style license that can be
  ~ found in the LICENSE file.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.notification.view.NotificationsFragment">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:layout_marginRight="@dimen/_10sdp"
                        android:drawablePadding="8dip"
                        android:layout_weight="1"
                        android:drawableStart="@drawable/ic_notification_dot"
                        android:drawableTint="@color/colorPrimary"
                        android:textColor="@color/colorPrimary"
                        android:fontFamily="@font/arvo_bold"
                        android:textFontWeight="700"
                        android:textSize="@dimen/_14ssp"
                        android:text="@string/notifications"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:targetApi="p" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvClearAll"
                        android:visibility="gone"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:textFontWeight="400"
                        android:fontFamily="@font/arvo_regular"
                        android:textSize="@dimen/_12ssp"
                        android:text="@string/clear_all"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:targetApi="p" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_marginTop="@dimen/_10sdp"
                    android:paddingStart="@dimen/_5sdp"
                    android:paddingEnd="@dimen/_5sdp"
                    android:id="@+id/recyclerView"
                    android:nestedScrollingEnabled="false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.core.widget.NestedScrollView>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/emptyLayout"
        android:gravity="center"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_gravity="center"
            android:layout_centerInParent="true"
            android:src="@drawable/frame_no_notification"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="@dimen/_120sdp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_width="@dimen/_180sdp"
            android:layout_height="wrap_content"
            android:text="No notifications yet"
            android:fontFamily="@font/arvo_bold"
            android:textFontWeight="400"
            android:textSize="@dimen/_12ssp"
            tools:targetApi="p"
            tools:ignore="HardcodedText" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_marginTop="@dimen/_5sdp"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_width="@dimen/_180sdp"
            android:layout_height="wrap_content"
            android:text="@string/you_will_be_notified_if_there_are_any_changes_to_your_schedule"
            android:fontFamily="@font/arvo_regular"
            android:textFontWeight="400"
            android:textSize="@dimen/_10ssp"
            tools:targetApi="p" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>